--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <p><strong>Data Controller:</strong> Johannes Spranger<br>
 Röderweg 36 B, 64625 Bensheim, Germany<br>
 Subject: <em>Privacy</em><br>
-Email: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerworks@gmail.com</a></p>
+Email: <a href="mailto:privacy@sprangerworks.com" style="color:blue;">privacy@sprangerworks.com</a></p>
 
 <p>Please note that we can only properly process requests if the subject line “Privacy” is used.</p>
 
@@ -394,7 +394,7 @@ Email: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerwork
 <p><strong>Verantwortlicher:</strong> Johannes Spranger<br>
 Röderweg 36 B, 64625 Bensheim, Deutschland<br>
 Betreff: <em>Privacy</em><br>
-E-Mail: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerworks@gmail.com</a></p>
+E-Mail: <a href="mailto:privacy@sprangerworks.com" style="color:blue;">privacy@sprangerworks.com</a></p>
 
 <p>Bitte beachte, dass wir Anfragen nur korrekt bearbeiten können, wenn die Betreffzeile „Privacy“ verwendet wird.</p>
 
@@ -545,7 +545,7 @@ E-Mail: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerwor
 <p><strong>Responsable du traitement :</strong> Johannes Spranger<br>
 Röderweg 36 B, 64625 Bensheim, Germany<br>
 Objet : <em>Privacy</em><br>
-Courriel : <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerworks@gmail.com</a></p>
+Courriel :<a href="mailto:privacy@sprangerworks.com" style="color:blue;">privacy@sprangerworks.com</a></p>
 
 <p>Veuillez noter que nous ne pouvons traiter correctement les demandes que si la ligne d'objet « Privacy » est utilisée.</p>
 
@@ -696,7 +696,7 @@ Courriel : <a href="mailto:sprangerworks@gmail.com" style="color:blue;">spranger
 <p><strong>Responsable del tratamiento:</strong> Johannes Spranger<br>
 Röderweg 36 B, 64625 Bensheim, Germany<br>
 Asunto: <em>Privacy</em><br>
-Correo electrónico: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerworks@gmail.com</a></p>
+Correo electrónico: <a href="mailto:privacy@sprangerworks.com" style="color:blue;">privacy@sprangerworks.com</a></p>
 
 <p>Ten en cuenta que solo podemos procesar correctamente las solicitudes si se utiliza la línea de asunto “Privacy”.</p>
 
@@ -841,7 +841,7 @@ Correo electrónico: <a href="mailto:sprangerworks@gmail.com" style="color:blue;
 <p><strong>Titolare del trattamento: </strong>Johannes Spranger<br>
 Röderweg 36 B, 64625 Bensheim, Germany<br>
 Oggetto: <em>Privacy</em><br>
-Email: <a href="mailto:sprangerworks@gmail.com" style="color:blue;">sprangerworks@gmail.com</a></p>
+Email: <a href="mailto:privacy@sprangerworks.com" style="color:blue;">privacy@sprangerworks.com</a></p>
 
 <p>Si prega di notare che possiamo elaborare correttamente le richieste solo se viene utilizzata la riga dell’oggetto “Privacy”.</p>
 
